--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "seed:sample": "node scripts/seed-sample-data.mjs"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.49.8",
     "bootstrap": "^5.3.3",
-    "bootstrap-icons": "^1.11.3"
+    "bootstrap-icons": "^1.11.3",
+    "dotenv": "^16.4.5"
   },
   "devDependencies": {
     "vite": "^6.1.0"
