feat: update project task links and enhance drag-and-drop functionality in project details

--- a/netlify.toml
+++ b/netlify.toml
@@ -7,3 +7,8 @@
   from = "/project/:id/edit"
   to = "/project/index.html"
   status = 200
+
+[[redirects]]
+  from = "/project/:id/tasks"
+  to = "/project-tasks/index.html"
+  status = 200
