feat: Implement Admin Panel with user and project management
- Added admin panel HTML, CSS, and JavaScript for managing projects, stages, tasks, and users.
- Introduced role-based access control with admin roles and permissions in Supabase.
- Updated project selection UI in the dashboard to use buttons instead of a dropdown.
- Enhanced project and user management functionalities, including edit and delete actions.
- Improved error handling and user feedback messages throughout the admin interface.
- Refactored project routes to align with new admin functionalities.

--- a/netlify.toml
+++ b/netlify.toml
@@ -4,7 +4,17 @@
   status = 200
 
 [[redirects]]
+  from = "/projects/new"
+  to = "/project/index.html"
+  status = 200
+
+[[redirects]]
   from = "/project/:id/edit"
+  to = "/project/index.html"
+  status = 200
+
+[[redirects]]
+  from = "/projects/:id/edit"
   to = "/project/index.html"
   status = 200
 
