feat: add task labels and discussion features
- Implemented task labels functionality, allowing users to add, view, and filter tasks by labels.
- Created a new page for displaying tasks by label with appropriate UI components.
- Added support for task comments and discussions, enabling users to comment on tasks.
- Updated project details page to include labels and comments sections.
- Enhanced the database schema to support task labels and comments with necessary policies for access control.
- Introduced real-time updates for task labels and comments using Supabase channels.

--- a/netlify.toml
+++ b/netlify.toml
@@ -24,6 +24,11 @@
   status = 200
 
 [[redirects]]
+  from = "/project/:id/labels"
+  to = "/project-labels/index.html"
+  status = 200
+
+[[redirects]]
   from = "/projects/:id/users"
   to = "/project-users/index.html"
   status = 200
