--- a/netlify.toml
+++ b/netlify.toml
@@ -29,6 +29,11 @@
   status = 200
 
 [[redirects]]
+  from = "/project/:id/deadlines"
+  to = "/project-deadlines/index.html"
+  status = 200
+
+[[redirects]]
   from = "/projects/:id/users"
   to = "/project-users/index.html"
   status = 200
